- added the error icons formatted perfectly in input box, added error messages below it while also fixing the spacing below the error messages

--- a/style.css
+++ b/style.css
@@ -124,12 +124,12 @@ h6 {
   line-height: 1.25;
   font-weight: var(--fw-600);
   font-size: 1.5rem;
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.5rem;
   margin-top: 0;
 }
 
 .product {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
   text-align: center;
 }
 
@@ -150,44 +150,33 @@ h6 {
   margin: 0.5rem 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 0.25rem;
   padding: 1rem;
   border-radius: 12px;
   align-items: space-evenly;
 }
 
-/* .input-group {
-  position: relative;
+.input-group {
+  display: flex;
+  align-items: center;
 }
 
 .error-icon {
-  position: absolute;
-  top: 50%;
-  right: 1rem;
-  transform: translateY(-50%);
-  display: none; 
+  height: 1.5rem;
+  margin: -2.5rem;
 }
 
 .error-message {
-  display: none;
   color: var(--Red-400);
-  font-size: 0.8rem;
-  text-align: right;
-  margin-top: 0.25rem;
+  font-size: calc(var(--font-size) * 0.55);
+  text-align: end;
 }
-
-.input-group.error .error-icon {
-  display: block;
-}
-
-.input-group.error .error-message {
-  display: block;
-} */
 
 .input {
   padding: 0.5em;
   border: 1px solid gray;
   border-radius: 7px;
+  width: 100%;
 }
 
 .button {
@@ -243,8 +232,16 @@ h6 {
     width: 445px;
   }
 
+  .form {
+    gap: 0.25rem;
+  }
+
   .promotion,
   .form {
     margin: 0.5rem 0;
+  }
+
+  .error-message {
+    margin-bottom: 1rem;
   }
 }
